api with vault/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: test
  labels:
    app: demo-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8848
    nodePort: 30002
  selector:
    app: demo-api
