api with vault/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations: 
    # nginx.ingress.kubernetes.io/app-root: /demo
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/rewrite-target: /
    # alb.ingress.kubernetes.io/actions.ssl-redirect: >-
    #   {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port":
    #   "443", "StatusCode": "HTTP_301"}}
    # alb.ingress.kubernetes.io/certificate-arn: >-
    #   arn:aws:acm:us-west-1:938631482679:certificate/ae1814eb-32c4-49f9-922a-0edb20ae0939,
    #   arn:aws:acm:us-west-1:938631482679:certificate/82fb158b-3d6b-47df-840b-ed3e8a242e4b,arn:aws:acm:us-west-1:938631482679:certificate/2fcb68de-32e9-4a84-8a37-adb98a19181a
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    # kubernetes.io/ingress.class: alb
  # annotations: 
    
  
spec:
  ingressClassName: nginx
  rules:
  - host: "example.com"
    http:
      paths:
      # - pathType: ImplementationSpecific
      #   path: "/*"     copy as same for below idf cluster is in eks as pathType and path remains same commented
      #   backend:
      #     service:
      #       name: ssl-redirect
      #       port:
      #         name: use-annotation
      - pathType: Prefix
        # path: "/demo(/|$)(.*)"
        path: /
        backend:
          service:
            name: demo-service
            port:
              number: 80
